# nix-dotfiles

./: .editorconfig  .gitignore  flake.nix  switch
modules/audio/: default.nix
modules/hardware/logitech/: default.nix
modules/programs/nix-alien/: default.nix
modules/programs/steam/: default.nix
modules/programs/virt-manager/: default.nix
modules/services/databases/: default.nix
modules/services/mongodb/: default.nix
modules/services/sxhkd/: default.nix
modules/windowmanagers/xmonad/: default.nix
outputs/: home-conf.nix  nixos-conf.nix
system/: configuration.nix  result
system/modules/services/sxhkd/: default.nix
system/nixos/: configuration.nix  hardware-configuration.nix
system/nixos/modules/: haskell-nix.nix
system/nixos/modules/programs/steam/: default.nix
system/nixos/modules/programs/virt-manager/: default.nix
systems/lenovo/: configuration.nix  hardware-configuration.nix
systems/workvm/: configuration.nix
users/silas/: home-conf.nix  home.nix  packages.nix  studentnummer.txt
users/silas/modules/fonts/: default.nix
users/silas/modules/haskell/: default.nix
users/silas/modules/programs/emacs/: default.nix
users/silas/modules/programs/plover/: default.nix  (+1 more)
users/silas/modules/python/: default.nix
users/silas/modules/xresources/: default.nix
users/silas/nixpkgs/: fonts.nix  home.conf  home.nix  package-lock.json  packages.nix
users/silas/nixpkgs/modules/: default.nix  git.nix  mpv.nix  sxhkd.nix  zsh.nix
xmonad/: default.nix  myXmonad.cabal
xmonad/dep/gitignoresrc/: github.json
xmonad/dep/nixpkgs/: github.json
(+62 files in other folders)
